--- a/Pages/ScrobblesPage.xaml
+++ b/Pages/ScrobblesPage.xaml
@@ -15,6 +15,7 @@
     <!-- loading spinner while api requests are made -->
     <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" x:Name="LoadingView">
       <ProgressRing IsActive="True" />
+      <Button x:Name="EndLoadingButton" Click="SwitchPage">Stop Loading</Button>
     </StackPanel>
       <!-- What to show once content is loaded -->
     <StackPanel x:Name="ScrobblesView" Visibility="Collapsed">
