Add user button to title bar

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -10,28 +10,29 @@
   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
   mc:Ignorable="d">
 
-  <Grid>
+  <Grid x:Name="AppRoot">
     <Grid.ColumnDefinitions>
       <!-- Columns for each part of the title bar - main part, profile section, and the control buttons -->
-      <ColumnDefinition Width="*"/>
-      <ColumnDefinition x:Name="ProfilePadding" Width="Auto" />
-      <ColumnDefinition x:Name="ButtonPadding" Width="144"/>
+      <ColumnDefinition x:Name="LeftButtonPadding" Width="0"/>
+      <ColumnDefinition x:Name="DraggableTitleBar" Width="*"/>
+      <ColumnDefinition x:Name="ProfilePadding" Width="Auto"/>
+      <ColumnDefinition x:Name="ButtonPadding" Width="0"/>
     </Grid.ColumnDefinitions>
     <Grid.RowDefinitions>
       <RowDefinition Height="48"/>
       <RowDefinition Height="*"/>
     </Grid.RowDefinitions>
     <!-- title bar for the app -->
-    <Border x:Name="AppTitleBar" VerticalAlignment="Top" Grid.Row="0" Height="48">
+    <Border x:Name="AppTitleBar" VerticalAlignment="Top" Grid.Row="0" Grid.Column="1" Height="48">
       <TextBlock x:Name="AppTitle" Text="Last.FM" VerticalAlignment="Center" Margin="16,0,0,0" />
     </Border>
     <!-- profile section-->
-    <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Right">
-      <Border x:Name="UserNameBox" VerticalAlignment="Top" Height="48">
-        <TextBlock x:Name="UserName"  VerticalAlignment="Center" Margin="16,0,8,0" />
-      </Border>
-      <PersonPicture x:Name="ProfilePicture" ProfilePicture="{x:Bind userData.user.image[1].text}" Height="32" Margin="8" />
-    </StackPanel>
+    <Button Grid.Row="0" Grid.Column="2" Padding="0" Height="48" Background="Transparent" BorderBrush="Transparent">
+      <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+        <TextBlock x:Name="UserName" Style="{ThemeResource CaptionTextBlockStyle}" VerticalAlignment="Center" Margin="8,0,8,0" />
+        <PersonPicture x:Name="ProfilePicture" Height="32" Margin="0,0,8,0" />
+      </StackPanel>
+    </Button>
     <!-- core navigation for the app -->
     <NavigationView 
       IsBackButtonVisible="Collapsed" 
@@ -39,7 +40,7 @@
       PaneDisplayMode="Top" 
       x:Name="mainNavigation" 
       Grid.Row="1"
-      Grid.ColumnSpan="3">
+      Grid.ColumnSpan="4">
       <NavigationView.MenuItems>
         <NavigationViewItem Icon="Audio" Content="Scrobbles" Tag="ScrobblesPage" />
         <NavigationViewItem Icon="Clock" Content="Reports" Tag="ReportsPage" />
