Minor design tweaks

--- a/Pages/ReportsPage.xaml
+++ b/Pages/ReportsPage.xaml
@@ -8,6 +8,8 @@
   mc:Ignorable="d">
 
   <Grid>
-    <TextBlock Text="Reports" Style="{StaticResource TitleTextBlockStyle}"/>
+    <StackPanel>
+      <TextBlock Text="Reports" Style="{StaticResource TitleTextBlockStyle}"/>
+    </StackPanel>
   </Grid>
 </Page>
