--- a/Pages/ReportsPage.xaml
+++ b/Pages/ReportsPage.xaml
@@ -5,7 +5,41 @@
   xmlns:local="using:WinFM.Pages"
   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+  xmlns:types="using:WinFM.Types.Reports"
   mc:Ignorable="d">
+
+  <Page.Resources>
+
+    <!-- Template for each artist -->
+    <DataTemplate x:Key="ArtistTemplate" x:DataType="types:Artist">
+      <Grid>
+        <Grid.RowDefinitions>
+          <RowDefinition Height="*" />
+          <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="Auto" />
+          <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+
+        <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="0">
+          <TextBlock Text="{x:Bind attr.rank}" x:Phase="1" Margin="0,6,0,0" />
+          <TextBlock Text="." Margin="0,6,0,0" />
+        </StackPanel>
+
+        <TextBlock Text="{x:Bind name}" Grid.Row="0" Grid.Column="1" x:Phase="1" Margin="12,6,0,0" />
+
+        <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="1">
+          <TextBlock Text="{x:Bind playcount}" Style="{ThemeResource CaptionTextBlockStyle}" x:Phase="1" Margin="12,0,0,6" />
+          <TextBlock Text=" Scrobbles" Style="{ThemeResource CaptionTextBlockStyle}" Margin="0,0,0,6" />
+        </StackPanel>
+
+      </Grid>
+    </DataTemplate>
+
+    <!-- Template for each album -->
+
+  </Page.Resources>
 
   <Grid>
     
@@ -25,31 +59,34 @@
     <!-- Top artists section -->
     <StackPanel Grid.Column="0" Grid.Row="1">
       <TextBlock Text="Top Artists" Style="{StaticResource SubtitleTextBlockStyle}" />
-      <TextBlock x:Name="TopArtist0" />
-      <TextBlock x:Name="TopArtist1" />
-      <TextBlock x:Name="TopArtist2" />
-      <TextBlock x:Name="TopArtist3" />
-      <TextBlock x:Name="TopArtist4" />
+
+      <ListView
+        x:Name="ArtistList"
+        ItemTemplate="{StaticResource ArtistTemplate}"
+        Height="235" />
+
     </StackPanel>
 
     <!-- Top albums section -->
     <StackPanel Grid.Column="1" Grid.Row="1">
       <TextBlock Text="Top Albums" Style="{StaticResource SubtitleTextBlockStyle}" />
-      <TextBlock x:Name="TopAlbum0" />
-      <TextBlock x:Name="TopAlbum1" />
-      <TextBlock x:Name="TopAlbum2" />
-      <TextBlock x:Name="TopAlbum3" />
-      <TextBlock x:Name="TopAlbum4" />
+
+      <ListView
+        x:Name="AlbumList"
+        ItemTemplate="{StaticResource ArtistTemplate}"
+        Height="235" />
+
     </StackPanel>
 
     <!-- Top artists section -->
     <StackPanel Grid.Column="2" Grid.Row="1">
       <TextBlock Text="Top Tracks" Style="{StaticResource SubtitleTextBlockStyle}" />
-      <TextBlock x:Name="TopTrack0" />
-      <TextBlock x:Name="TopTrack1" />
-      <TextBlock x:Name="TopTrack2" />
-      <TextBlock x:Name="TopTrack3" />
-      <TextBlock x:Name="TopTrack4" />
+
+      <ListView
+        x:Name="TrackList"
+        ItemTemplate="{StaticResource ArtistTemplate}"
+        Height="235" />
+
     </StackPanel>
 
   </Grid>
